--- a/ivy.xml
+++ b/ivy.xml
@@ -45,6 +45,7 @@
 		<dependency org="org.jsoup" name="jsoup" rev="1.7.2"/>
 		<dependency org="org.reflections" name="reflections" rev="0.9.8"/>
 		<dependency org="hsqldb" name="hsqldb" rev="1.8.0.10"/>
+		<dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.3.1"/>
 	</dependencies>
 	
 </ivy-module>
